--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<p>College of Saint Benedict, MN</p>
 		<p>2010-2014</p>
 		<br>
-		<h3><b><u>Skills</u></h3>
+		<h3><b><u>Skills</u></b></h3>
 		<p>Microsoft Office</p>
 		<p>Social Media Platfoms</p>
 		<p>Google AdWords</p>
@@ -55,11 +55,11 @@
 		<ul>
 			<li>Provided excellent guest service.</li>
 			<li>Learned more about the local food movement and the local farms involved.</li>
-			<li>Participated in community outreach and envolvement events to educate people about Good Real Food.</li>
+			<li>Participated in community outreach and involvement events to educate people about Good Real Food.</li>
 		</ul>
 		<br>
 		<p><b>MMLocal Foods</b></p>
-		<p><b>Farmers Market Manager</b> | July 2014 - December 2014 | Denver, Co</p> 
+		<p><b>Farmers Market Manager</b> | July 2014 - December 2014 | Denver, CO</p> 
 		<ul>
 			<li>Managed transportation, delivery and aesthetic display of direct to consumer product.</li>
 			<li>Marketed local food products to diverse customer base through face to face interaction.</li>
